--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,10 @@
 h1. Alteia - RPG
 
 This repository houses all of the information for players involved with our campaign.
+
+h2. Table of Contents
+* "Mechanics":mechanics
+** "Adventures Guild":mechanics/adventures+guild.textile
+** "Commerce":mechanics/commerce.textile
+** "Downtime Activities":mechanics/downtime+activities.textile
+** "Wealth":mechanics/wealth.textile
